(login) add calligraphy typo for welcome title

--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
+
     <link rel="icon" type="image/png" href="./img/favicon_bootcamp_manager.png">
 
     <style>
@@ -28,7 +30,7 @@
             margin: 1rem;
             padding: 0;
             border-radius: 15px;
-            box-shadow: none;
+            box-shadow: 0 4px 20px rgba(106, 47, 28, 0.7);
             overflow: hidden;
         }
 
@@ -61,6 +63,9 @@
             font-weight: 700;
             margin: 0;
             text-align: center;
+             font-family: "Homemade Apple", cursive;
+            font-weight: 400;
+            font-style: normal;
         }
 
         .role-selection {
@@ -206,7 +211,7 @@
 
             <!-- <img src="./img/Factoria-F5-Official-Logo-2.png" alt="FactoriaF5" /> -->
         </div>
-        <h2 class="welcome-title">Welcome to roadmap generator!</h2>
+        <h2 class="welcome-title">Hi! welcome to roadmap generator!</h2>
         <div id="danger-alert" class="alert alert-danger hidden" role="alert"></div>
         <div id="success-alert" class="alert alert-success hidden" role="alert"></div>
 
