--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -10,31 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/promotion-detail.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./img/favicon_bootcamp_manager.png">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
 
-    <style>
-        .dropdown-item-custom {
-            padding: 0;
-        }
 
-        .dropdown-item-custom .form-check {
-            padding: 0.5rem 1rem;
-            margin: 0;
-            border-radius: 0;
-        }
-
-        .dropdown-item-custom .form-check:hover {
-            background-color: var(--bs-gray-100);
-        }
-
-        .dropdown-item-custom .form-check-label {
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .pildora-students-dropdown .dropdown-menu {
-            width: 100% !important;
-        }
-    </style>
 </head>
 
 <body>
@@ -119,7 +97,7 @@
                             <h1 id="promotion-title">Loading...</h1>
                             <p id="promotion-desc" class="text-muted"></p>
                         </div>
-                        <button class="btn btn-info" onclick="previewPromotion()"
+                        <button class="btn btn-preview-green" onclick="previewPromotion()"
                             title="Preview how students will see this page">
                             <i class="bi bi-eye me-2"></i>Preview
                         </button>
@@ -612,7 +590,7 @@
                                                 <i class="bi bi-chevron-right"></i>
                                             </button>
                                         </div>
-                                        <div class="badge bg-info text-dark" id="current-module-stats">
+                                        <div class="badge text-dark" id="current-module-stats">
                                             <span id="module-pildoras-count">0</span> píldoras
                                         </div>
                                         <div class="form-check form-switch ms-3 border-start ps-4"
