added fichas de estudiante

--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -1450,6 +1450,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/promotion-detail.js"></script>
+    <script src="js/student-tracking.js"></script>
 </body>
 
 </html>
