--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -40,8 +40,8 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="dashboard.html">
-                                <i class="bi bi-speedometer2 me-2"></i>Dashboard
+                            <a class="nav-link nav-link-promotions" href="dashboard.html">
+                                <i class="bi bi-arrow-left me-2"></i>Promotions
                             </a>
                         </li>
                         <li class="nav-item">
