--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -668,6 +668,37 @@
                             </div>
                         </div>
 
+                        <!-- Competencias -->
+                        <div class="col-12 mb-4">
+                            <div class="card">
+                                <div class="card-header bg-light d-flex justify-content-between align-items-center">
+                                    <div class="d-flex align-items-center gap-3">
+                                        <h5 class="mb-0"><i class="bi bi-award me-2"></i>Competencias</h5>
+                                        <span class="badge bg-warning text-dark d-none" id="competences-unsaved-badge">
+                                            <i class="bi bi-circle-fill me-1" style="font-size:0.5rem;"></i>Sin guardar
+                                        </span>
+                                    </div>
+                                    <div class="d-flex align-items-center gap-2">
+                                        <select class="form-select form-select-sm" id="competences-area-filter"
+                                            style="min-width: 160px;"
+                                            onchange="window.ProgramCompetences?.filterByArea()">
+                                            <option value="">Todas las áreas</option>
+                                            <!-- populated dynamically from DB by ProgramCompetences.init() -->
+                                        </select>
+                                        <button class="btn btn-sm btn-outline-primary"
+                                            onclick="window.ProgramCompetences?.openAddCompetenceModal()">
+                                            <i class="bi bi-plus"></i> Añadir Competencia
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <div id="competences-list-container">
+                                        <!-- Renderizado por program-competences.js -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Evaluation -->
                         <div class="col-12 mb-4">
                             <div class="card">
@@ -1449,6 +1480,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/program-competences.js"></script>
     <script src="js/promotion-detail.js"></script>
     <script src="js/student-tracking.js"></script>
 </body>
