--- a/public/public-promotion.html
+++ b/public/public-promotion.html
@@ -103,6 +103,27 @@
                             <!-- Custom sections will be populated here -->
                         </div>
 
+                        <!-- Competencias -->
+                        <div class="col-md-12" id="competences-section" style="display:none;">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title section-title">
+                                        <i class="bi bi-award me-2"></i> Competencias
+                                    </h5>
+                                    <div class="mb-3 d-flex align-items-center gap-2">
+                                        <label class="form-label mb-0 fw-semibold">Filtrar por área:</label>
+                                        <select class="form-select form-select-sm w-auto" id="public-competences-area-filter"
+                                            onchange="filterPublicCompetences()">
+                                            <option value="">Todas</option>
+                                        </select>
+                                    </div>
+                                    <div id="public-competences-list">
+                                        <!-- Populated by public-promotion.js -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Quick Links -->
                         <div class="col-md-12" id="quick-links">
                             <div class="card">
