(promotion-details) remove cards modules

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -58,7 +58,7 @@
                 <div id="promotions-section" class="section-content">
                     <div class="d-flex  align-items-center my-4">
                         
-                        <h1>My promotions</h1>
+                        <h1 class="page-title">My promotions</h1>
                         <button class="btn-new" onclick="openNewPromotionModal()">
                             <i class="bi bi-plus-circle me-2"></i>New Promotion
                         </button>
