(login) change welcome message

--- a/public/login.html
+++ b/public/login.html
@@ -211,7 +211,7 @@
 
             <!-- <img src="./img/Factoria-F5-Official-Logo-2.png" alt="FactoriaF5" /> -->
         </div>
-        <h2 class="welcome-title">Hi! welcome to roadmap generator!</h2>
+        <h2 class="welcome-title">Hi! Welcome and enjoy!</h2>
         <div id="danger-alert" class="alert alert-danger hidden" role="alert"></div>
         <div id="success-alert" class="alert alert-success hidden" role="alert"></div>
 
