Added styles to competences

--- a/public/public-promotion.html
+++ b/public/public-promotion.html
@@ -106,17 +106,19 @@
                         <!-- Competencias -->
                         <div class="col-md-12" id="competences-section" style="display:none;">
                             <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title section-title">
-                                        <i class="bi bi-award me-2"></i> Competencias
+                                <div class="card-header d-flex justify-content-between align-items-center flex-wrap gap-2">
+                                    <h5 class="card-title section-title mb-0">
+                                        <i class="bi bi-award me-2"></i>Competencias
                                     </h5>
-                                    <div class="mb-3 d-flex align-items-center gap-2">
-                                        <label class="form-label mb-0 fw-semibold">Filtrar por área:</label>
+                                    <div class="d-flex align-items-center gap-2">
+                                        <label class="form-label mb-0 small fw-semibold text-muted">Área:</label>
                                         <select class="form-select form-select-sm w-auto" id="public-competences-area-filter"
                                             onchange="filterPublicCompetences()">
                                             <option value="">Todas</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="card-body p-0">
                                     <div id="public-competences-list">
                                         <!-- Populated by public-promotion.js -->
                                     </div>
