--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -455,9 +455,17 @@
                 <div id="info-tab" class="section-content hidden">
                     <div class="d-flex justify-content-between align-items-center my-4">
                         <h2>Program Details</h2>
-                        <button class="btn btn-primary" onclick="saveExtendedInfo()">
-                            <i class="bi bi-save me-2"></i>Save All Changes
-                        </button>
+                        <div class="d-flex gap-2 flex-wrap">
+                            <button class="btn btn-outline-secondary" onclick="Reports.printActaInicio(promotionId)" title="Generar PDF del Acta de Inicio">
+                                <i class="bi bi-file-earmark-text me-2"></i>Acta de Inicio
+                            </button>
+                            <button class="btn btn-outline-secondary" onclick="Reports.printDescripcionTecnica(promotionId)" title="Generar PDF de la Descripción Técnica de Formación">
+                                <i class="bi bi-file-earmark-richtext me-2"></i>Descripción Técnica
+                            </button>
+                            <button class="btn btn-primary" onclick="saveExtendedInfo()">
+                                <i class="bi bi-save me-2"></i>Save All Changes
+                            </button>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -1480,6 +1488,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/reports.js"></script>
     <script src="js/program-competences.js"></script>
     <script src="js/promotion-detail.js"></script>
     <script src="js/student-tracking.js"></script>
