(promotion-details)move save button to header top-right position

--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -490,6 +490,10 @@
                             <h2 class="mb-0">Program Details</h2>
                             <small class="text-muted" id="program-details-subtitle">Schedule</small>
                         </div>
+                        <button id="save-program-details-btn" class="btn btn-primary" onclick="saveExtendedInfo()" 
+                            title="Save all changes to Program Details">
+                            <i class="bi bi-save me-2"></i>Save All Changes
+                        </button>
                     </div>
 
                     <!-- Program Details Navigation Tabs -->
@@ -805,12 +809,6 @@
                     </div>
                 </div>
             </main>
-
-            <!-- Floating Save Button -->
-            <button id="floating-save-btn" class="floating-save-btn hidden btn btn-primary" onclick="saveExtendedInfo()" 
-                title="Save all changes to Program Details">
-                <i class="bi bi-save me-2"></i>Save All Changes
-            </button>
         </div>
     </div>
 
