Added styles to pdf reports

--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -1760,6 +1760,23 @@ ISECR2 Finalizar cada programa con un máximo de bajas de 10%.</textarea>
                             </div>
                         </div>
 
+                        <!-- Aprobación y difusión del documento -->
+                        <div class="col-12 mt-2">
+                            <hr class="my-2">
+                            <label class="form-label fw-semibold">
+                                <i class="bi bi-pen me-1 text-secondary"></i>Aprobación y difusión del documento
+                            </label>
+                            <small class="text-muted d-block mb-2">Persona responsable de aprobar y difundir este acta.</small>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="form-label fw-semibold">Nombre</label>
+                            <input type="text" class="form-control" id="acta-approval-name" placeholder="Nombre completo" list="acta-users-datalist">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="form-label fw-semibold">Cargo</label>
+                            <input type="text" class="form-control" id="acta-approval-role" placeholder="Ej: Project Manager">
+                        </div>
+
                     </div><!-- /row -->
                 </div><!-- /modal-body -->
                 <div class="modal-footer">
